k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: smart-checkin
  labels:
    name: smart-checkin
